--- a/.github/workflows/eval_pr.yml
+++ b/.github/workflows/eval_pr.yml
@@ -8,6 +8,22 @@ on:
 permissions: write-all
 
 jobs:
+  getMainCodeowners:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+        with:
+          ref: main
+      - name: Output Main Required Reviewers
+        id: rr
+        run: |
+          cat .github/CODEOWNERS-custom | while read line
+          do
+            echo $line >> tmp.txt
+          done
+          echo "TMP.TXT FROM MAIN"
+          cat tmp.txt
   changedfiles:
     runs-on: ubuntu-latest
     # Map a step output to a job output
@@ -25,10 +41,14 @@ jobs:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         # Set outputs using the command.
         run: |
+
+          
          
           diffs=$(git diff --name-only --diff-filter=ACMRT ${{ github.event.pull_request.base.sha }} ${{ github.event.pull_request.head.sha }})
           git diff --name-only --diff-filter=ACMRT ${{ github.event.pull_request.base.sha }} ${{ github.event.pull_request.head.sha }} >> diffs.txt
 
+          
+          
           echo "DIFFS.TXT"
           cat diffs.txt
        
@@ -41,6 +61,8 @@ jobs:
           done
           echo "TMP.TXT"
           cat tmp.txt
+
+          
 
 
           grep -f diffs.txt tmp.txt | grep -o "@\S*" >> required_reviewers.txt
@@ -61,22 +83,9 @@ jobs:
           echo "RUNNING COMM"
           comm -13 <(sort -u approvers.txt) <(sort -u required_reviewers.txt)
 
-          #teams=$(gh api -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" orgs/Eaton-Vance-Corp/teams/aws-iam-admins/members)
-          #echo "$teams"
+          
 
-          gh api graphql -f query='query GetTeamMembers {
-            organization(login: "Eaton-Vance-Corp") {
-            teams(first: 100, userLogins: ["ccipolla"]) {
-            totalCount
-              edges {
-                node {
-                  name
-                  description
-                }
-              }
-            }
-          }
-          }'
+          
           rm tmp.txt
           
   lint:
